Fixed z-index

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -25,6 +25,7 @@ button.jqbook {
 /* wrapper for iframe */
 div.jqbook {
   position: relative;
+  z-index: 999;
 }
 
 /* sticked wrapper */
